--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.2.3
+@version        1.2.4
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2910,6 +2910,13 @@ if themep == classic {
 		min-width: 150px;
 		}
 	}
+	div#page[enhancements="true"] div#c-users div#a-show .profile-container {
+	flex-direction: column;
+	}
+	div#page[enhancements="true"] 
+	div#c-users div#a-show .bottom-section.bottom-section {
+	max-width: unset!important;
+	}
 	div#page[enhancements="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-uploads div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-uploads div.vertical-sectionn {
 	flex-wrap: unset!important;
 	gap: .25rem;
@@ -2921,6 +2928,44 @@ if themep == classic {
 	display: none!important;
 	justify-content: center!important;
 	display:flex;
+	}
+	#c-help #sidebar, #c-wiki-pages #sidebar {
+	width: auto!important;
+	top: auto!important;
+			h1 {
+			width: 75%;
+			text-align: center;
+			border-bottom: 1px solid var(--bg-400);
+			margin-inline: auto;
+			margin-bottom: .5rem;
+			padding-bottom: .25rem;
+			}
+	}
+	#c-help #sidebar div[style="width:240px"] {
+	width: 100%!important;
+	}
+	#c-help #sidebar ul, #c-wiki-pages #sidebar ul {
+	width: 100% !important;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: .5rem;
+	margin-bottom: 3rem;
+		
+		li {
+		border: 2px solid var(--bg-400);
+		padding: .25rem;
+		background-color: var(--bg);
+		border-radius: 6px;
+			&:hover {
+			background-color: var(--bg-300);
+			}
+		}
+	}
+	
+	body.resp div#page #c-help section#content, body.resp div#page #c-wiki-pages section#content {
+	margin-left: 1rem!important;
+	margin-right: 1rem!important;
 	}
 	}
 	}
