--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.2.4
+@version        1.2.5
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2812,6 +2812,82 @@ if themep == classic {
 	}
 	div#c-posts div#a-index aside#sidebar, div#c-posts div#a-show aside#sidebar, div#c-favorites div#a-index aside#sidebar {
 	width: 14.15rem;
+	}
+	div#c-posts div#a-index section#content, div#c-posts div#a-show section#content, div#c-favorites div#a-index section#content {
+	position:unset!important;
+	}
+	body[data-action="show"] div#c-posts #a-show, body[data-action="show-seq"] div#c-posts #a-show, div#c-posts div#a-index, div#c-posts div#a-show, div#c-favorites div#a-index {
+	display: flex!important;
+	flex-direction: column-reverse;
+		aside#sidebar {
+		padding: 0!important;
+		width: calc(100% - .5rem)!important;
+		margin-inline: auto;
+		display: flex;
+ 		flex-direction: column;
+		
+		}
+		a#sidebar-collapse {
+		display:none;
+		}
+		section#image-extra-controls {
+		margin-inline: auto;
+		}
+		.bg-foreground {
+		background-color: transparent!important;
+		width: 100%;
+		}
+		#content {
+		width: calc(100% - .5rem)!important;
+		max-width: unset!important;
+		}
+		#tag-list, #post-information, #post-options, #post-related-images {
+		width: fit-content;
+		margin-inline: auto;
+		} 
+		#post-options, #post-history {
+  		display: flex;
+  		flex-direction: column;
+			h1 {
+			margin-inline: auto;
+			}
+			ul {
+			display: flex;
+			align-items: center;
+			gap: .5rem;
+			width: fit-content;
+			margin-inline: auto;
+			}
+		}
+		#tag-box > ul li, #tag-list > ul li {
+		width: fit-content
+		div.tag-actions {
+		right: -2rem;
+		}	
+		}
+	
+	
+	/*	aside#sidebar {
+		margin-top: 45vh; 
+			.bg-foreground {
+			background-color: transparent!important;
+			}
+		}
+		#image-and-nav {
+		position: absolute;
+		max-height: 40vh!important;
+		top:2rem;
+		left:1rem;
+		right: 1rem;
+			#image, #image-container {
+			width: auto;
+			max-height: 49vh;
+			height:100%;
+			}
+		}
+		#image-extra-controls {
+		margin-top: 45vh;
+		}*/
 	}
 	.list-of-comments {
 	margin-top: 2rem;
