--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.2.7
+@version        1.2.8
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2650,7 +2650,20 @@ if themep == classic {
     border-color: var(--bg-300)!important;
 	}
 	table.striped tbody tr td, table.table tbody tr td {
-    background-color: var(--bg)!important;
+    background-color: var(--bg);
+	}
+	.replacement-pending-row td:first-child article {
+	border: 2px solid var(--bg-400);
+	border-radius: 0.5rem;
+		.desc {
+		border-radius: 0px!important;
+		}
+	}
+	.replacement-pending-row td:nth-child(2) img {
+	border: 2px solid var(--bg-400);
+	}
+	.replacement-pending-row td:nth-child(-n + 2) {
+	background-color: var(--flagged)!important;
 	}
 	/* User feedback table */ 
 	div#c-user-feedbacks #a-index .striped > tbody > tr > td {
