--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.2.8
+@version        1.2.9
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn (www.mandorinn.dev)
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -1259,6 +1259,28 @@ if themep == classic {
     overflow:hidden;
     min-width: fit-content;
 	}
+	.notice-flagged a[href*="/post_replacements"] {
+	font-size: 0;
+	width: 275px;
+	position: relative;
+	margin-left: 135px;
+	pointer-events: none;
+	padding-top: .4rem;
+		&::before {
+		font-size: .85rem;
+		content: "View the pending replacements:"
+		pointer-events: none!important;
+		color: var(--base-text);
+		position:relative;
+		user-select: inherit;
+		}
+		&::after {
+		font-size: .85rem;
+		content: " here."
+		position:relative;
+		pointer-events: auto;
+		}
+	}
 	.notice-flagged:nth-child(1) {
     display: flex;
     flex-direction: column;
@@ -1273,7 +1295,7 @@ if themep == classic {
     align-items: center;
 	}
 	.notice-flagged:nth-child(1) > p::before {
-    content: "This post was flagged for review";
+    content: "This post was flagged for review.";
     color: var(--base-text);
     position:absolute;
     display:flex;
